--- a/direccion.html
+++ b/direccion.html
@@ -4,10 +4,8 @@
       <title>Cómo Llegar - VIAPY</title>
       <style>
         body {
-          font-family: Arial, sans-serif;
           margin: 0;
           padding: 0;
-          background-color: #f7f7f7;
         }
         header {
           background-color: #24225f;
@@ -74,34 +72,34 @@
     </head>
     <body bgcolor="#ffffff">
         <nav>
-          <div class="navbar">
-            <a id="button" href="contacto.html">Contacto</a>
-            <a id="button" href="direccion.html">Como Llegar y Zona Delivery</a>
-            <a id="button" href="preguntas.html">Preguntas Frecuentes</a>
-            <div class="dropdown">
-              <button class="dropbtn">Servicios</button>
-              <div class="dropdown-content">
-                <a href="flete.html">Flete Miami - Asunción</a>
-                <a href="intermediario.html">Compramos por vos</a>
-                <a href="delivery.html">Delivery de paquetes</a>
-                <a href="externo.html">Asesoramiento para empresas</a>
-              </div>
+            <div class="navbar"> 
+                <a id="button" href="contacto.html"><span>Contacto</span></a>
+                <a id="button" href="direccion.html"><span>Como Llegar y Zona Delivery</span></a>
+                <a id="button" href="preguntas.html"><span>Preguntas Frecuentes</span></a>
+                <div class="dropdown">
+                    <button class="dropbtn">Servicios</button>
+                    <div class="dropdown-content">
+                        <a href="flete.html"><span>Flete Miami - Asunción</span></a>
+                        <a href="intermediario.html"><span>Compramos por vos</span></a>
+                        <a href="delivery.html" ><span>Delivery de paquetes</span></a>
+                        <a href="externo.html"><span>Asesoramiento para empresas</span></a>
+                    </div>
+                </div>
+                <a id="button" href="sobrenosotros.html"><span>Sobre Nosotros</span></a>
+                <a class="img" href="main.html" style="float:left"><img src="imagenes/logo.png" height="21px"></a>
             </div>
-            <a id="button" href="sobrenosotros.html">Sobre Nosotros</a>
-            <a class="img" href="main.html" style="float:left"><img src="imagenes/logo.png" height="21px"></a>
-          </div>
         </nav>
         <header>
             <h1>Dirección de Nuestro Local</h1>
         </header>
 
         <main>
-            <section class="mapa">
+            <section class="mapa" style="box-shadow: 2px 2px 1px black;">
                 <h2>Ubicación en Mapa</h2>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d225.45079344733506!2d-57.596479373070075!3d-25.29705704494617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945da621a783c1e9%3A0x70425476bd452375!2sAgencia%20Lobo!5e0!3m2!1ses!2spy!4v1751223693499!5m2!1ses!2spy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><p><strong>Dirección:</strong> Calle Doctor Leandro Prieto 3849 casi Teniente Benítez, Barrio Mburicao, Asunción</p>
             </section>
             
-            <section>
+            <section style="box-shadow: 2px 2px 1px black;">
                 <h3>Zona Delivery</h3>
                 <p>Próximamente</p>
             </section>
