--- a/main.html
+++ b/main.html
@@ -6,34 +6,24 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
-    <style>
-        body{
-            background-image: url(imagenes/fondo.png);
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: 50%;
-            background-position: center;
-            background-color: #f7f7f7;
-        }
-    </style>
     <!--Colores consistentes con la paleta usada por el cliente en su perfil ya existente de Instagram-->
     <!-- Todas las imágenes usadas son de licencia gratuita, obtenidas de https://www.pexels.com -->
     <body>
         <nav>
             <div class="navbar"> 
-                <a id="button" href="contacto.html">Contacto</a>
-                <a id="button" href="direccion.html">Como Llegar y Zona Delivery</a>
-                <a id="button" href="preguntas.html">Preguntas Frecuentes</a>
+                <a id="button" href="contacto.html"><span>Contacto</span></a>
+                <a id="button" href="direccion.html"><span>Como Llegar y Zona Delivery</span></a>
+                <a id="button" href="preguntas.html"><span>Preguntas Frecuentes</span></a>
                 <div class="dropdown">
                     <button class="dropbtn">Servicios</button>
                     <div class="dropdown-content">
-                        <a href="flete.html">Flete Miami - Asunción</a>
-                        <a href="intermediario.html">Compramos por vos</a>
-                        <a href="delivery.html">Delivery de paquetes</a>
-                        <a href="externo.html">Asesoramiento para empresas</a>
+                        <a href="flete.html"><span>Flete Miami - Asunción</span></a>
+                        <a href="intermediario.html"><span>Compramos por vos</span></a>
+                        <a href="delivery.html" ><span>Delivery de paquetes</span></a>
+                        <a href="externo.html"><span>Asesoramiento para empresas</span></a>
                     </div>
                 </div>
-                <a id="button" href="sobrenosotros.html">Sobre Nosotros</a>
+                <a id="button" href="sobrenosotros.html"><span>Sobre Nosotros</span></a>
                 <a class="img" href="main.html" style="float:left"><img src="imagenes/logo.png" height="21px"></a>
             </div>
         </nav>
@@ -46,7 +36,11 @@
                     <article>
                         <div class="flexbox">
                             <img src="imagenes/courier01.jpg" style="width: 50%; border-radius: 5px;">
-                            <div><h2 align="center">La manera más fácil de traer tus compras</h2><p id="textblock"> Con VIAPY podes realizar tus compras online y te lo traemos hasta Asunción. Recibilo en 7 días tras su llegada a Miami. Pedí tu casilla gratuita hoy mismo. <br> Contamos con delivery en Asunción y Gran Asunción, con costo adicional.<br> <br>¿Necesitas ayuda? Envianos un mensaje y te asesoramos al momento de hacer las compras.</p></div>
+                            <div>
+                                <h2 align="center">La manera más fácil de traer tus compras</h2>
+                                <br>
+                                <p id="textblock"> Con VIAPY podes realizar tus compras online y te lo traemos hasta Asunción. Recibilo en 7 días tras su llegada a Miami. Pedí tu casilla gratuita hoy mismo. <br> Contamos con delivery en Asunción y Gran Asunción, con costo adicional.<br> <br>¿Necesitas ayuda? Envianos un mensaje y te asesoramos al momento de hacer las compras.</p>
+                            </div>
                         </div>
                     </article>
                     <br>
