--- a/externo.html
+++ b/externo.html
@@ -7,19 +7,19 @@
     <body bgcolor="#ffffff">
         <nav>
             <div class="navbar"> 
-                <a id="button" href="contacto.html">Contacto</a>
-                <a id="button" href="direccion.html">Como Llegar y Zona Delivery</a>
-                <a id="button" href="preguntas.html">Preguntas Frecuentes</a>
+                <a id="button" href="contacto.html"><span>Contacto</span></a>
+                <a id="button" href="direccion.html"><span>Como Llegar y Zona Delivery</span></a>
+                <a id="button" href="preguntas.html"><span>Preguntas Frecuentes</span></a>
                 <div class="dropdown">
                     <button class="dropbtn">Servicios</button>
                     <div class="dropdown-content">
-                        <a href="flete.html">Flete Miami - Asunción</a>
-                        <a href="intermediario.html">Compramos por vos</a>
-                        <a href="delivery.html">Delivery de paquetes</a>
-                        <a href="externo.html">Asesoramiento para empresas</a>
+                        <a href="flete.html"><span>Flete Miami - Asunción</span></a>
+                        <a href="intermediario.html"><span>Compramos por vos</span></a>
+                        <a href="delivery.html" ><span>Delivery de paquetes</span></a>
+                        <a href="externo.html"><span>Asesoramiento para empresas</span></a>
                     </div>
                 </div>
-                <a id="button" href="sobrenosotros.html">Sobre Nosotros</a>
+                <a id="button" href="sobrenosotros.html"><span>Sobre Nosotros</span></a>
                 <a class="img" href="main.html" style="float:left"><img src="imagenes/logo.png" height="21px"></a>
             </div>
         </nav>
