Añadida etiqueta de "detalles" en Preguntas Frecuentes, limpiada lista de trabajo

--- a/preguntas.html
+++ b/preguntas.html
@@ -39,45 +39,51 @@
         <main>
             <section id="paragraph" style="margin-bottom: 20px;">
                 <article>
-                    <h2>¿Cómo obtengo una casilla?</h2>
-                    <br>
-                    <p>Podés registrarte de forma gratuita en nuestro sitio web y te asignaremos una dirección de casilla en Estados Unidos para tus compras.</p>
+                    <details>
+                        <summary><h2>¿Cómo obtengo una casilla?</h2></summary>
+                        <p>Podés registrarte de forma gratuita en nuestro sitio web y te asignaremos una dirección de casilla en Estados Unidos para tus compras.</p>
+                    </details>
+                        <br>
+                </article>
+
+                <article>
+                    <details>
+                        <summary><h2>¿Cómo llega mi pedido desde Miami?</h2></summary>
+                        <br>
+                        <p>Tenés la opción de traerlo por avión, o por barco.</p>
+                    </details>
                     <br>
                 </article>
 
                 <article>
-                    <h2>¿Cómo llega mi pedido desde Miami?</h2>
-                    <br>
-                    <p>Tenés la opción de traerlo por avión, o por barco.</p>
-                    <br>
-                </article>
-
-                <article>
-                    <h2>¿Cuánto tarda en llegar mi paquete?</h2>
-                    <br>
-                    <p>Una vez recibido en nuestra casilla, el envío a Asunción tarda entre 7 a 10 días hábiles por aire, y 3 meses por agua.</p>
+                    <details>
+                        <summary><h2>¿Cuánto tarda en llegar mi paquete?</h2></summary>
+                        <p>Una vez recibido en nuestra casilla, el envío a Asunción tarda entre 7 a 10 días hábiles por aire, y 3 meses por agua.</p>
+                    </details>
                     <br>
                 </article>
 
                 <article>
-                    <h2>¿Puedo hacer seguimiento de mi pedido?</h2>
-                    <br>
-                    <p>Sí. Cada paquete cuenta con un número de seguimiento que podés consultar desde tu cuenta.</p>
-                    <br>
-                </article>
-
-                <article>
-                    <h2>¿Qué tipo de productos puedo traer?</h2>
-                    <br>
-                    <p>Podés traer ropa, electrónicos, accesorios y muchos otros productos, excepto artículos prohibidos por aduanas.</p>
+                    <details>
+                        <summary><h2>¿Puedo hacer seguimiento de mi pedido?</h2></summary>
+                        <p>Sí. Cada paquete cuenta con un número de seguimiento que podés consultar desde tu cuenta.</p>
+                    </details>
                     <br>
                 </article>
 
                 <article>
-                    <h2>¿Cómo los contacto si tengo dudas?</h2>
+                    <details>
+                        <summary><h2>¿Qué tipo de productos puedo traer?</h2></summary>
+                        <p>Podés traer ropa, electrónicos, accesorios y muchos otros productos, excepto artículos prohibidos por aduanas.</p>
+                    </details>
                     <br>
+                </article>
+
+                <article>
+                    <details>
+                    <summary><h2>¿Cómo los contacto si tengo dudas?</h2></summary>
                     <p>Visitá nuestra <a href="contacto.html">página de contacto</a> o escribinos por redes sociales y te ayudaremos al instante.</p>
-                    <br>
+                    </details>
                 </article>
             </section>
         </main>
