Añadido estilo a elementos con etiqueta <details>

--- a/preguntas.html
+++ b/preguntas.html
@@ -40,54 +40,47 @@
             <section id="paragraph" style="margin-bottom: 20px;">
                 <article>
                     <details>
-                        <summary><h2>¿Cómo obtengo una casilla?</h2></summary>
+                        <summary>¿Cómo obtengo una casilla?</summary>
                         <p>Podés registrarte de forma gratuita en nuestro sitio web y te asignaremos una dirección de casilla en Estados Unidos para tus compras.</p>
                     </details>
                         <br>
                 </article>
-
                 <article>
                     <details>
-                        <summary><h2>¿Cómo llega mi pedido desde Miami?</h2></summary>
-                        <br>
+                        <summary>¿Cómo llega mi pedido desde Miami?</summary>
                         <p>Tenés la opción de traerlo por avión, o por barco.</p>
                     </details>
                     <br>
                 </article>
-
                 <article>
                     <details>
-                        <summary><h2>¿Cuánto tarda en llegar mi paquete?</h2></summary>
+                        <summary>¿Cuánto tarda en llegar mi paquete?</summary>
                         <p>Una vez recibido en nuestra casilla, el envío a Asunción tarda entre 7 a 10 días hábiles por aire, y 3 meses por agua.</p>
                     </details>
                     <br>
                 </article>
-
                 <article>
                     <details>
-                        <summary><h2>¿Puedo hacer seguimiento de mi pedido?</h2></summary>
+                        <summary>¿Puedo hacer seguimiento de mi pedido?</summary>
                         <p>Sí. Cada paquete cuenta con un número de seguimiento que podés consultar desde tu cuenta.</p>
                     </details>
                     <br>
                 </article>
-
                 <article>
                     <details>
-                        <summary><h2>¿Qué tipo de productos puedo traer?</h2></summary>
+                        <summary>¿Qué tipo de productos puedo traer?</summary>
                         <p>Podés traer ropa, electrónicos, accesorios y muchos otros productos, excepto artículos prohibidos por aduanas.</p>
                     </details>
                     <br>
                 </article>
-
                 <article>
                     <details>
-                    <summary><h2>¿Cómo los contacto si tengo dudas?</h2></summary>
+                    <summary>¿Cómo los contacto si tengo dudas?</summary>
                     <p>Visitá nuestra <a href="contacto.html">página de contacto</a> o escribinos por redes sociales y te ayudaremos al instante.</p>
                     </details>
                 </article>
             </section>
         </main>
-
         <footer > <!-- Editar si es necesario extender la pagina -->
             <p>&copy; 2025 VIAPY. Todos los derechos reservados.</p>
         </footer>
