Cambios de estilo, ordenamiento de código

--- a/contacto.html
+++ b/contacto.html
@@ -5,62 +5,6 @@
   <title>Contacto - VIAPY</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #24225f;
-      color: #fff;
-      padding: 40px;
-      margin-top: 10px;
-      text-align: center;
-    }
-
-    main {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
-    }
-
-    section {
-      margin-bottom: 40px;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-    }
-
-    form label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
-
-    form input,
-    form textarea {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    form button {
-      background-color: #24225f;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    form button:hover {
-      background-color: #24225f;
-    }
-
-  </style>
 </head>
 
 <body bgcolor="#ffffff">
@@ -125,9 +69,10 @@
       </table>
     </section>
   </main>
+
   <div align="center">
     <p><a href="main.html">Volver a la página principal</a></p>
-  </div>
+  </div><br>
   <footer>
     <p>&copy; 2025 Viapy_Courier. Todos los derechos reservados.</p>
   </footer>
