--- a/flete.html
+++ b/flete.html
@@ -4,32 +4,6 @@
         <title>Proceso de Envío - ViaPy</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
-        <style>
-        body {
-            color: #333;
-            line-height: 1.6;
-        }
-
-        h2 {
-            color: #333;
-            margin-top: 30px;
-        }
-
-        ul {
-            padding-left: 20px;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-
-        footer {
-            background-color: #24225f;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-        }
-    </style>
     </head>
 <body bgcolor="#ffffff">
     <nav>
@@ -52,34 +26,42 @@
         </nav>
     <header>
         <h1>Proceso de Envio con ViaPy</h1>
-    </header>
-    <article id="paragraph">
         <p>Con ViaPy, enviar tus compras desde <strong>Miami a Asunción</strong> es rápido, seguro y simple.</p>
+    </header>
+    <main>
+        <section class="zoom-section" style="box-shadow: 2px 2px 1px black;">
+            <h2>1. Registro y obtención de dirección en Miami</h2><br>
+                <ul style="margin-left: 20px;">
+                    <li>Te registrás en nuestra plataforma ViaPy y recibís una dirección de contacto.</li>
+                    <li>Usás esa dirección para tus compras online en tiendas de EE.UU. como Amazon, eBay, Walmart, etc.</li>
+                </ul>
+        </section>
 
-        <h2>1. Registro y obtención de dirección en Miami</h2>
-        <ul>
-            <li>Te registrás en nuestra plataforma ViaPy y recibís una dirección de contacto.</li>
-            <li>Usás esa dirección para tus compras online en tiendas de EE.UU. como Amazon, eBay, Walmart, etc.</li>
-        </ul>
+        <section class="zoom-section"style="box-shadow: 2px 2px 1px black;">
+            <h2>2. Recepción y procesamiento en Miami</h2><br>
+                <ul style="margin-left: 20px;">
+                    <li>Realizamos los pedidos de los clientes.</li>
+                    <li>Verificamos el contenido, peso, y preparamos el paquete para su envío internacional.</li>
+                </ul>
+        </section>
 
-        <h2>2. Recepción y procesamiento en Miami</h2>
-        <ul>
-            <li>Realizamos los pedidos de los clientes.</li>
-            <li>Verificamos el contenido, peso, y preparamos el paquete para su envío internacional.</li>
-        </ul>
+        <section class="zoom-section" style="box-shadow: 2px 2px 1px black;">
+            <h2>3. Envío desde Miami a Asunción</h2><br>
+                <ul style="margin-left: 20px;">
+                    <li>El vuelo sale rumbo a Paraguay normalmente en 7 a 10 días hábiles.</li>
+                    <li>Usamos transporte seguro.</li>
+                </ul>
+        </section>
 
-        <h2>3. Envío desde Miami a Asunción</h2>
-        <ul>
-            <li>El vuelo sale rumbo a Paraguay normalmente en 7 a 10 días hábiles.</li>
-            <li>Usamos transporte seguro.</li>
-        </ul>
+        <section class="zoom-section" style="box-shadow: 2px 2px 1px black;">
+            <h2>4. Aduana y entrega final</h2><br
+                <ul style="margin-left: 20px;">
+                    <li>Nos encargamos de los trámites aduaneros en Paraguay.</li>
+                    <li>Una vez liberado el paquete, te notificamos para el retiro.</li>
+                </ul>
+        </section>
+    </main>
 
-        <h2>4. Aduana y entrega final</h2>
-        <ul>
-            <li>Nos encargamos de los trámites aduaneros en Paraguay.</li>
-            <li>Una vez liberado el paquete, te notificamos para el retiro.</li>
-        </ul>
-    </article>
     <footer>
         © 2025 ViaPy_Courier. Todos los derechos reservados.
     </footer>
