--- a/preguntas.html
+++ b/preguntas.html
@@ -4,16 +4,7 @@
         <meta charset="UTF-8">
         <title>Preguntas Frecuentes - VIAPY</title>
         <link rel="stylesheet" href="style.css">
-    </head>
-    <style>
-        header {
-            background-color: #24225f;
-            color: #fff;
-            padding: 40px;
-            margin-top: 10px;
-            text-align: center;
-        }
-    </style>
+</head>
     <body bgcolor="#ffffff">
         <nav>
             <div class="navbar"> 
@@ -37,49 +28,78 @@
             <h1 align="center">Preguntas Frecuentes</h1>
         </header>
         <main>
-            <section id="paragraph" style="margin-bottom: 20px;">
-                <article>
-                    <details>
-                        <summary>¿Cómo obtengo una casilla?</summary>
+            <section>
+                <div class="acordeon-container">
+                    <div class="item">
+                        <div class="title">
+                            <span class="bullet">&#9658;</span>
+                            <h3>¿Cómo obtengo una casilla?</h3>
+                        </div>
+                        <div class="content">
                         <p>Podés registrarte de forma gratuita en nuestro sitio web y te asignaremos una dirección de casilla en Estados Unidos para tus compras.</p>
-                    </details>
-                        <br>
-                </article>
-                <article>
-                    <details>
-                        <summary>¿Cómo llega mi pedido desde Miami?</summary>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="title">
+                            <span class="bullet">&#9658;</span>
+                            <h3>¿Cómo llega mi pedido desde Miami?</h3>
+                        </div>
+                        <div class="content">
                         <p>Tenés la opción de traerlo por avión, o por barco.</p>
-                    </details>
-                    <br>
-                </article>
-                <article>
-                    <details>
-                        <summary>¿Cuánto tarda en llegar mi paquete?</summary>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="title">
+                            <span class="bullet">&#9658;</span>
+                            <h3>¿Cuánto tarda en llegar mi paquete?</h3>
+                        </div>
+                        <div class="content">
                         <p>Una vez recibido en nuestra casilla, el envío a Asunción tarda entre 7 a 10 días hábiles por aire, y 3 meses por agua.</p>
-                    </details>
-                    <br>
-                </article>
-                <article>
-                    <details>
-                        <summary>¿Puedo hacer seguimiento de mi pedido?</summary>
+                        </div>
+                    </div>
+                    
+                    <div class="item">
+                        <div class="title">
+                            <span class="bullet">&#9658;</span>
+                            <h3>¿Puedo hacer seguimiento de mi pedido?</h3>
+                        </div>
+                        <div class="content">
                         <p>Sí. Cada paquete cuenta con un número de seguimiento que podés consultar desde tu cuenta.</p>
-                    </details>
-                    <br>
-                </article>
-                <article>
-                    <details>
-                        <summary>¿Qué tipo de productos puedo traer?</summary>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="title">
+                            <span class="bullet">&#9658;</span>
+                            <h3>¿Qué tipo de productos puedo traer?</h3>
+                        </div>
+                        <div class="content">
                         <p>Podés traer ropa, electrónicos, accesorios y muchos otros productos, excepto artículos prohibidos por aduanas.</p>
-                    </details>
-                    <br>
-                </article>
-                <article>
-                    <details>
-                    <summary>¿Cómo los contacto si tengo dudas?</summary>
-                    <p>Visitá nuestra <a href="contacto.html">página de contacto</a> o escribinos por redes sociales y te ayudaremos al instante.</p>
-                    </details>
-                </article>
-            </section>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="title">
+                            <span class="bullet">&#9658;</span>
+                            <h3>¿Cómo los contacto si tengo dudas?</h3>
+                        </div>
+                        <div class="content">
+                        <p>Visitá nuestra página de <a href="contacto.html">contacto</a> o escribinos por redes sociales y te ayudaremos al instante.</p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="title">
+                            <span class="bullet">&#9658;</span>
+                            <h3>1</h3>
+                        </div>
+                        <div class="content">
+                        <p>2</p>
+                        </div>
+                    </div>
+                </div>
         </main>
         <footer > <!-- Editar si es necesario extender la pagina -->
             <p>&copy; 2025 VIAPY. Todos los derechos reservados.</p>
