--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -6,15 +6,6 @@
         <title>Sobre Nosotros - VIAPY</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <style>
-        header {
-            background-color: #24225f;
-            color: #fff;
-            padding: 40px;
-            margin-top: 10px;
-            text-align: center;
-        }
-    </style>
     <body>
         <nav>
             <div class="navbar"> 
@@ -34,32 +25,37 @@
                 <a class="img" href="main.html" style="float:left"><img src="imagenes/logo.png" height="21px"></a>
             </div>
         </nav>
-        <header>
-            <h1 align="center">Sobre Nosotros</h1>
-        </header>
+            <header>
+                <h1 align="center">Sobre Nosotros</h1>
+            </header>
         <main>
-            <section>
-        <article id="paragraph" style="text-align: center;">
-            <div>
-                <br>
-                <h2 align="center">Misión</h2>
-                <br>
-                <p>Facilitar el acceso a productos del exterior mediante un servicio de courier confiable, ágil y económicamente accesible, que permita a nuestros clientes en Paraguay realizar sus compras internacionales con total seguridad, trazabilidad y comodidad. Nos comprometemos a ofrecer soluciones logísticas integrales, con tecnología de vanguardia, atención personalizada y un enfoque centrado en la experiencia del cliente.</p>
-                <br>
-            </div>
-            <div>
-                <h2 align="center">Visión</h2>
-                <br>
-                <p>Convertirnos en la empresa de referencia en Paraguay en el rubro de logística de compras internacionales, liderando por nuestra eficiencia operativa, capacidad de adaptación tecnológica y un servicio al cliente excepcional. Aspiramos a transformar la experiencia de compra transfronteriza en el país, marcando tendencia en innovación logística, sostenibilidad y confianza a largo plazo.</p>
-                <br>
-            </div>
-            <div>
-                <h2 align="center">Nuestro Servicio</h2>
-                <br>
-                <p>Con VIAPY podes realizar tus compras online y te lo traemos hasta Asunción. Pedí tu casilla gratuita hoy mismo. ¿Necesitas ayuda? Envianos un mensaje y te asesoramos al momento de hacer las compras.</p>
-            </div> 
-        </article>
-        <br>           
+            <section class="zoom-section" style="box-shadow: 2px 2px 1px black;">
+                <div>
+                    <br>
+                    <h2 align="center">Misión</h2>
+                    <br>
+                    <p>Facilitar el acceso a productos del exterior mediante un servicio de courier confiable, ágil y económicamente accesible, que permita a nuestros clientes en Paraguay realizar sus compras internacionales con total seguridad, trazabilidad y comodidad. Nos comprometemos a ofrecer soluciones logísticas integrales, con tecnología de vanguardia, atención personalizada y un enfoque centrado en la experiencia del cliente.</p>
+                    <br>
+                </div>
+            </section>
+
+            <section class="zoom-section" style="box-shadow: 2px 2px 1px black;">
+                <div>
+                    <h2 align="center">Visión</h2>
+                    <br>
+                    <p>Convertirnos en la empresa de referencia en Paraguay en el rubro de logística de compras internacionales, liderando por nuestra eficiencia operativa, capacidad de adaptación tecnológica y un servicio al cliente excepcional. Aspiramos a transformar la experiencia de compra transfronteriza en el país, marcando tendencia en innovación logística, sostenibilidad y confianza a largo plazo.</p>
+                    <br>
+                </div>
+            </section>
+
+            <section class="zoom-section" style="box-shadow: 2px 2px 1px black;">
+                <div>
+                    <h2 align="center">Nuestro Servicio</h2>
+                    <br>
+                    <p>Con VIAPY podes realizar tus compras online y te lo traemos hasta Asunción. Pedí tu casilla gratuita hoy mismo. ¿Necesitas ayuda? Envianos un mensaje y te asesoramos al momento de hacer las compras.</p>
+                </div> 
+            </section>
+
         <table>
             <tr align="center">
                 <td><a href="https://www.amazon.com" target="_blank"><img src=imagenes/amazon.png width="60%" title="Ir a Amazon" alt="Logo de Amazon"></a></td>
