--- a/direccion.html
+++ b/direccion.html
@@ -35,7 +35,8 @@
             
             <section style="box-shadow: 2px 2px 1px black;">
                 <h3>Zona Delivery</h3>
-                <p>Próximamente</p>
+                <br>
+                <img src="imagenes/mapa.png">
             </section>
         </main>
 
